ajustando método buscarPautasPorAssembleia